--- a/index.html
+++ b/index.html
@@ -772,7 +772,9 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="historyModalLabel">היסטוריה</h5>
+            <h5 class="modal-title" id="historyModalLabel">
+              היסטוריה&nbsp;&nbsp;&nbsp;
+            </h5>
             <button
               type="button"
               class="btn-close"
@@ -800,7 +802,9 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="alertsModalLabel">היסטוריית התראות</h5>
+            <h5 class="modal-title" id="alertsModalLabel">
+              היסטוריית התראות&nbsp;&nbsp;&nbsp;
+            </h5>
             <button
               type="button"
               class="btn-close"
@@ -1036,7 +1040,7 @@
                   })">
                       ${
                         task.text
-                      } <span class="info-icon"><i class="fa-solid fa-calendar-days"></i>
+                      } &nbsp;&nbsp;&nbsp;<span class="info-icon"><i class="fa-solid fa-calendar-days"></i>
                       <div class="info-content">
                           <p>תאריך התחלה: ${task.startDate}</p>
                           <hr>
