--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
                         <p class="mb-0"><b>תאריך התחלה:</b> ${
                           task.startDate
                         }</p>
-                        <p class="mb-0"><b>תאריך יעד סופי<:</b> ${
+                        <p class="mb-0"><b>תאריך יעד סופי:</b> ${
                           task.endDate
                         }</p>
                         <p class="mb-0"><b>תאריך סיום:</b> ${
