--- a/index.html
+++ b/index.html
@@ -569,6 +569,15 @@
         color: white; /* צבע טקסט לבן */
         border: 1px solid #dc3545; /* גבול כהה */
       }
+
+      /*Modal delete confirmation*/
+      .modal-delete-confirmation {
+        max-width: 400px; /* קביעת רוחב מקסימלי */
+        margin: 30vh auto; /* מיקום במרכז המסך */
+      }
+      .modal-delete-confirmation .modal-content {
+        background-color: #f8d7da;
+      }
     </style>
   </head>
   <body>
@@ -886,7 +895,53 @@
         </div>
       </div>
     </div>
-
+    <!-- Modal למחיקת פניה/משימה -->
+    <div
+      class="modal fade"
+      id="deleteConfirmationModal"
+      tabindex="-1"
+      aria-labelledby="deleteConfirmationModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-delete-confirmation">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteConfirmationModalLabel">
+              אישור מחיקה
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              שים לב! פעולת המחיקה תמחק לנצח את הפניה/משימה. האם אתה בטוח
+              שברצונך להמשיך?
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              ביטול
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirmDeleteButton"
+              disabled
+            >
+              מחק
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-hot-toast/dist/index.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
@@ -1012,10 +1067,26 @@
       }
 
       function deleteTaskFromHistory(id) {
-        deletedTasks = deletedTasks.filter((task) => task.id !== id);
-        localStorage.setItem("deletedTasks", JSON.stringify(deletedTasks));
-        showHistory();
-        showToast("הפניה/משימה נמחקה מההיסטוריה בהצלחה!");
+        const deleteConfirmationModal = new bootstrap.Modal(
+          document.getElementById("deleteConfirmationModal")
+        );
+        deleteConfirmationModal.show();
+
+        const confirmDeleteButton = document.getElementById(
+          "confirmDeleteButton"
+        );
+        confirmDeleteButton.disabled = true;
+        setTimeout(() => {
+          confirmDeleteButton.disabled = false;
+        }, 5000);
+
+        confirmDeleteButton.onclick = function () {
+          deletedTasks = deletedTasks.filter((task) => task.id !== id);
+          localStorage.setItem("deletedTasks", JSON.stringify(deletedTasks));
+          showHistory();
+          showToast("הפניה/משימה נמחקה מההיסטוריה בהצלחה!");
+          deleteConfirmationModal.hide();
+        };
       }
 
       function changeTaskType(id, newType) {
